--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "CommonJS",
-    "outDir": "dist",
-    "strict": false,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "emitDecoratorMetadata": true,
+    "target": "es2016", 
     "experimentalDecorators": true,
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "emitDecoratorMetadata": true,                  
+    "module": "commonjs",                                
+    "rootDir": "./",                                  
+    "types": ["reflect-metadata"],                            
+    "esModuleInterop": true,                    
+    "forceConsistentCasingInFileNames": true,
+    "strict": false,               
+    "skipLibCheck": true                              
+  }
 }
