--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon --exec ts-node ./src/index.ts",
-    "test": "jest --coverage",
+    "start": "NODE_ENV=development nodemon --exec ts-node ./src/index.ts",
+    "test": "NODE_ENV=test jest --verbose --coverage",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
-    "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run"
+    "migration:run": "NODE_ENV=development typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +16,14 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jest": "^29.5.0",
     "joi": "^17.9.2",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.6",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.16",
     "uuid": "^9.0.0"
@@ -29,7 +31,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
-    "@types/node": "^20.1.2",
+    "@types/node": "^20.3.1",
     "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
