--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,10 @@
     "module": "CommonJS",                                
     "rootDir": "./",     
     "outDir": "./dist",                             
-    "types": ["reflect-metadata", "jest"],                            
+    "types": ["reflect-metadata", "jest", "node"],                            
     "esModuleInterop": true,                    
     "forceConsistentCasingInFileNames": true,
     "strict": false,               
     "skipLibCheck": true,    
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]                 
+  },             
 }
